About: A p5.js tropical cyclone simulation game

v20190422c:
    + Added setting for the previously inaccessible shader added in v20181105a
v20190422b:
    + Added a "Map Type" option to the basin creation menu
    + Added three new map types: East Continent, West Continent, and Island Ocean
        > The existing default map type from previous versions is called Two Continents
v20190422a:
    * Fixed crash bug when selecting a newly-spawned (before first advisory) system while the info panel is open
    * Fixed crash bug when loading a basin after exiting to the main menu from another basin with the info panel open
v20190420a:
    + Added partial under-the-hood support for text input UI elements
        > includes commented-out input element on the main menu
v20190413a:
    + Added Atl 1979-1984 name list preset (original iteration of the current Atlantic naming system)
v20190412a:
    * Most likely finally fixed the HiDPI graphical bug for real this time
    % Upgraded p5.js dependency from 0.6.1 to 0.8.0
v20190411a:
    + Added settings menu
        > Accessible from main menu and within a sim basin
        > Currently only includes settings for intensity indicators, autosaving, and track mode
    * Settings added to settings menu are now saved and preserved between reloads (e.g. intensity indicators no longer need to be enabled with every page load)
    * Simulation is automatically paused when loading a saved basin, but still starts unpaused for newly created basins
    * Main rendering and click actions (storm selection/spawning) for basins now tied to primaryWrapper UI element
    * Another attempt to fix the high-density display graphical bug
v20190401a:
    + Added Atlantic basin map
    * Fixed bug with tropical depressions not numbered in loaded basins
    - April Fools! No Atlantic basin map. SAD!
v20190321a:
    * Atlantic name list preset names "Florence" and "Michael" retired and replaced with "Francine" and "Milton"