@@ -1,5 +1,7 @@
 About: A p5.js tropical cyclone simulation game
 
+v20190423a:
+    + Added Central Continent map type
 v20190422c:
     + Added setting for the previously inaccessible shader added in v20181105a
 v20190422b:
